--- a/node/action.yml
+++ b/node/action.yml
@@ -78,3 +78,27 @@ runs:
         SONAR_TOKEN: ${{ inputs.sonar_token }}
       with:
         args: ${{ inputs.sonar_args }}
+
+    - name: Add QEMU support
+      uses: docker/setup-qemu-action@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Build Docker image for testing
+      uses: docker/build-push-action@v5
+      with:
+        load: true
+        tags: ${{ inputs.docker_image_name }}:${{ github.sha }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+    
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: ${{ inputs.docker_image_name }}:${{ github.sha }}
+        format: 'table'
+        exit-code: '1'
+        ignore-unfixed: true
+        vuln-type: 'os,library'
+        severity: 'CRITICAL,HIGH'
