--- a/node/action.yml
+++ b/node/action.yml
@@ -10,6 +10,7 @@ inputs:
     required: false # only required for Organizations, not personal accounts
   node_version:
     description: 'Node Version'
+    required: false
   sonar_token:
     description: 'Token for SonarCloud access'
     required: true
@@ -19,18 +20,25 @@ inputs:
   docker_image_name:
     description: 'Docker image name'
     required: true
-  dockerhub_username:
-    description: 'DockerHub username'
+  container_registry:
+    description: 'Container Registry'
     required: true
-  dockerhub_token:
-    description: 'DockerHub token for authentication'
+  container_registry_username:
+    description: 'Container Registry username'
+    required: true
+  container_registry_password:
+    description: 'Container Registry password'
     required: true
 
 runs:
   using: 'composite'
   steps:
+    - name: Get branch names.
+      id: branch-names
+      uses: tj-actions/branch-names@v8
+
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v4    
 
     - name: Validate conventional commits
       uses: wagoid/commitlint-github-action@v6    
@@ -39,7 +47,7 @@ runs:
       uses: gitleaks/gitleaks-action@v2
       env:
         GITHUB_TOKEN: ${{ inputs.github_token }}
-        GITLEAKS_LICENSE: ${{ inputs.gitleaks_token }} 
+        GITLEAKS_LICENSE: ${{ inputs.gitleaks_token }}
 
     - name: Cache node modules
       id: cache-npm
@@ -85,20 +93,39 @@ runs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
+    - name: Format test image tag for caching
+      run: |
+        echo "formatted_branch_name=$(echo ${{ steps.branch-names.outputs.current_branch }} | sed 's/\//-/g')" >> $GITHUB_ENV
+      shell: bash
+
     - name: Build Docker image for testing
       uses: docker/build-push-action@v5
       with:
         load: true
-        tags: ${{ inputs.docker_image_name }}:${{ github.sha }}
+        tags: ${{ inputs.docker_image_name }}:${{ env.formatted_branch_name }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
     
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ${{ inputs.docker_image_name }}:${{ github.sha }}
+        image-ref: ${{ inputs.docker_image_name }}:${{ env.formatted_branch_name }}
         format: 'table'
         exit-code: '1'
         ignore-unfixed: true
         vuln-type: 'os,library'
         severity: 'CRITICAL,HIGH'
+
+    - name: Semantic Release
+      uses: cycjimmy/semantic-release-action@v4
+      with:
+        branch: main
+      env:
+        GITHUB_TOKEN: ${{ inputs.github_token }}
+
+    - name: Login to container repository
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ inputs.container_registry }}
+        username: ${{ inputs.container_registry_username }}
+        password: ${{ inputs.container_registry_password }}
