--- a/node/action.yml
+++ b/node/action.yml
@@ -20,14 +20,11 @@ inputs:
   docker_image_name:
     description: 'Docker image name'
     required: true
-  container_registry:
-    description: 'Container Registry'
+  dockerhub_username:
+    description: 'Dockerhub username'
     required: true
-  container_registry_username:
-    description: 'Container Registry username'
-    required: true
-  container_registry_password:
-    description: 'Container Registry password'
+  dockerhub_token:
+    description: 'Dockerhub Token'
     required: true
 
 runs:
@@ -38,7 +35,9 @@ runs:
       uses: tj-actions/branch-names@v8
 
     - name: Checkout code
-      uses: actions/checkout@v4    
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0   
 
     - name: Validate conventional commits
       uses: wagoid/commitlint-github-action@v6    
@@ -116,16 +115,56 @@ runs:
         vuln-type: 'os,library'
         severity: 'CRITICAL,HIGH'
 
+    - name: Login to dockerhub
+      if: ${{ steps.branch-names.outputs.current_branch == 'main' && github.event_name == 'push' }} 
+      uses: docker/login-action@v3
+      with:
+        username: ${{ inputs.dockerhub_username }}
+        password: ${{ inputs.dockerhub_token }}
+
+    - name: Login to GitHub Container Registry (For repository packages)
+      if: ${{ steps.branch-names.outputs.current_branch == 'main' && github.event_name == 'push'}} 
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ inputs.github_token }}
+
     - name: Semantic Release
+      if: ${{ steps.branch-names.outputs.current_branch == 'main' && github.event_name == 'push' }} 
       uses: cycjimmy/semantic-release-action@v4
+      id: semantic
       with:
         branch: main
       env:
         GITHUB_TOKEN: ${{ inputs.github_token }}
 
-    - name: Login to container repository
-      uses: docker/login-action@v3
+    - name: Set image tag
+      if: ${{ steps.branch-names.outputs.current_branch == 'main' && github.event_name == 'push' }}
+      run: |
+        if [[ $(echo ${{ steps.semantic.outputs.new_release_published }}) = "true" ]]; then
+          echo "image_tag=$(echo ${{ steps.semantic.outputs.new_release_version }})" >> $GITHUB_ENV
+        else
+          echo "image_tag=$(echo ${{ steps.semantic.outputs.last_release_version }})" >> $GITHUB_ENV
+        fi        
+      shell: bash
+
+    - name: Extract metadata (tags, labels) for Docker
+      if: ${{ steps.branch-names.outputs.current_branch == 'main' && github.event_name == 'push' }}
+      id: meta
+      uses: docker/metadata-action@v5
       with:
-        registry: ${{ inputs.container_registry }}
-        username: ${{ inputs.container_registry_username }}
-        password: ${{ inputs.container_registry_password }}
+        images: |
+          ${{ inputs.dockerhub_username }}/${{ inputs.docker_image_name }}
+          ghcr.io/${{ github.repository_owner }}/${{ inputs.docker_image_name }}
+        tags: |
+          ${{ env.image_tag }}
+          latest
+
+    - name: Build and push image
+      if: ${{ steps.branch-names.outputs.current_branch == 'main' && github.event_name == 'push' }}
+      uses: docker/build-push-action@v5
+      with:
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
