--- a/node-pipeline/.github/workflows/angular.yml
+++ b/node-pipeline/.github/workflows/angular.yml
@@ -2,6 +2,11 @@ name: Angular CI Workflow
 
 on: [push, pull_request]
 
+env:
+  DOCKER_IMAGE_NAME: ""
+  SONAR_ORGANIZATION: ""
+  SONAR_PROJECT_KEY: ""
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,8 +27,8 @@ jobs:
         node_version: "lts/*"
         sonar_token: ${{ secrets.SONAR_TOKEN }}
         sonar_args: >
-          -Dsonar.organization=<ORGANISATION>
-          -Dsonar.projectKey=<PROJECT KEY>
-        docker_image_name: <NAME OF IMAGE>
+          -Dsonar.organization=${{ env.SONAR_ORGANIZATION }}
+          -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }}
+        docker_image_name: ${{ env.DOCKER_IMAGE_NAME }}
         dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
         dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
