--- a/python-pipeline/.github/workflows/python.yml
+++ b/python-pipeline/.github/workflows/python.yml
@@ -29,6 +29,7 @@ jobs:
       uses: ./.github/actions/python/
       with: 
         github_token: ${{ secrets.GITHUB_TOKEN }}
+        gitleaks_token: ${{ secrets.GITLEAKS_TOKEN }}
         sonar_token: ${{ secrets.SONAR_TOKEN }}
         sonar_args: >
           -D sonar.organization=${{ env.SONAR_ORGANIZATION }}
