fix(python): fix slight VSCode and DevContainer errors

--- a/gradle-pipeline/.devcontainer/Dockerfile
+++ b/gradle-pipeline/.devcontainer/Dockerfile
@@ -4,4 +4,4 @@ FROM registry.access.redhat.com/ubi9/ubi:latest
 RUN dnf install git nano java-21-openjdk -y
 
 # Install nodejs for SonarQube 
-RUN dnf install nodejs
+RUN dnf install nodejs -y
