--- a/gradle-pipeline/.vscode/tasks.json
+++ b/gradle-pipeline/.vscode/tasks.json
@@ -4,16 +4,24 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build",
+            "label": "Build",
             "type": "shell",
-            "command": "gradle build",
+            "command": "gradlew",
+            "args": ["build"],
             "group": "build"
         },
         {
-            "label": "run",
+            "label": "Run",
             "type": "shell",
-            "command": "gradle run",
+            "command": "gradlew",
+            "args": ["run"],
             "group": "test"
+        },
+        {
+            "label": "Clean",
+            "type": "shell",
+            "command": "gradlew",
+            "args": ["clean"],
         }
     ]
 }
