--- a/maven-pipeline/.devcontainer/devcontainer.json
+++ b/maven-pipeline/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 {
-	"name": "java-maven",
+	"name": "java-maven-devcontainer",
 	"build": {
 		"dockerfile": "Dockerfile",
 		"context": "."
