fix(action): adjust Trivy template dir

--- a/python-pipeline/.github/actions/python/action.yml
+++ b/python-pipeline/.github/actions/python/action.yml
@@ -136,7 +136,7 @@ runs:
       with:
         image-ref: ${{ inputs.docker_image_name }}:${{ env.formatted_branch_name }}
         format: template
-        template: "@/github/workspace/.github/actions/python/trivy.tpl"
+        template: ".github/actions/python/trivy.tpl"
         output: trivy-high-critical.md
         ignore-unfixed: true
         vuln-type: 'os,library'
