--- a/maven-pipeline/.github/actions/maven/action.yml
+++ b/maven-pipeline/.github/actions/maven/action.yml
@@ -94,7 +94,7 @@ runs:
       with:
         image-ref: ${{ inputs.docker_image_name }}:${{ env.formatted_branch_name }}
         format: template
-        template: "@/github/workspace/.github/actions/maven/trivy.tpl"
+        template: ".github/actions/maven/trivy.tpl"
         output: trivy-high-critical.md
         ignore-unfixed: true
         vuln-type: 'os,library'
