--- a/node-pipeline/.github/actions/node/action.yml
+++ b/node-pipeline/.github/actions/node/action.yml
@@ -111,7 +111,7 @@ runs:
       with:
         image-ref: ${{ inputs.docker_image_name }}:${{ env.formatted_branch_name }}
         format: template
-        template: "@/github/workspace/.github/actions/node/trivy.tpl"
+        template: ".github/actions/node/trivy.tpl"
         output: trivy-high-critical.md
         ignore-unfixed: true
         vuln-type: 'os,library'
