--- a/python-poetry-pipeline/.github/actions/python-poetry/action.yml
+++ b/python-poetry-pipeline/.github/actions/python-poetry/action.yml
@@ -223,7 +223,7 @@ runs:
       with:
         image-ref: ${{ inputs.docker_image_name }}:${{ env.formatted_branch_name }}
         format: template
-        template: "@/github/workspace/.github/actions/python-poetry/trivy.tpl"
+        template: ".github/actions/python-poetry/trivy.tpl"
         output: trivy-high-critical.md
         ignore-unfixed: true
         vuln-type: 'os,library'
