--- a/python-uv-pipeline/.github/actions/python-uv/action.yml
+++ b/python-uv-pipeline/.github/actions/python-uv/action.yml
@@ -189,7 +189,7 @@ runs:
       with:
         image-ref: ${{ inputs.docker_image_name }}:${{ env.formatted_branch_name }}
         format: template
-        template: "@/github/workspace/.github/actions/python-uv/trivy.tpl"
+        template: ".github/actions/python-uv/trivy.tpl"
         output: trivy-high-critical.md
         ignore-unfixed: true
         vuln-type: 'os,library'
