--- a/python-pipeline/.github/actions/python/action.yml
+++ b/python-pipeline/.github/actions/python/action.yml
@@ -98,7 +98,7 @@ runs:
         sed -i 's@'$GITHUB_WORKSPACE'@/github/workspace/@g' $GITHUB_WORKSPACE/${{ inputs.pytest_coverage_xml_file_name }}
 
     - name: SonarCloud Scan
-      uses: SonarSource/sonarcloud-github-action@master
+      uses: SonarSource/sonarqube-scan-action@v5.0.0
       with:
         args: ${{ inputs.sonar_args }}
       env: 
