--- a/gradle-pipeline/.github/workflows/gradle.yml
+++ b/gradle-pipeline/.github/workflows/gradle.yml
@@ -6,6 +6,7 @@ env:
   DOCKER_IMAGE_NAME: ""
   SONAR_ORGANIZATION: ""
   SONAR_PROJECT_KEY: ""
+  GRADLE_APP_SOURCE_DIR: "."
 
 jobs:
   build:
@@ -34,3 +35,4 @@ jobs:
         docker_image_name: ${{ env.DOCKER_IMAGE_NAME }}
         dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
         dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
+        source_dir: ${{ env.GRADLE_APP_SOURCE_DIR }}
