--- a/maven-pipeline/.devcontainer/devcontainer.json
+++ b/maven-pipeline/.devcontainer/devcontainer.json
@@ -2,8 +2,8 @@
 {
 	"name": "java-maven-devcontainer",
 	"build": {
-		"dockerfile": "Dockerfile",
-		"context": "."
+		"dockerfile": "../Dockerfile",
+		"context": "../"
 	},
 	"features": {
 		"ghcr.io/devcontainers/features/common-utils:2": {}
