--- a/node-pipeline/.github/actions/node/action.yml
+++ b/node-pipeline/.github/actions/node/action.yml
@@ -26,6 +26,10 @@ inputs:
   dockerhub_token:
     description: 'Dockerhub Token'
     required: false
+  source_dir:
+    description: 'Source directory for the python application'
+    required: true
+    default: '.'
 
 runs:
   using: 'composite'
@@ -68,14 +72,17 @@ runs:
 
     - name: Install dependencies
       run: npm ci
+      working-directory: ${{ inputs.source_dir }}
       shell: bash
 
     - name: Create test:ci
       run: npm pkg set scripts.test:ci="ng test --no-watch --no-progress --browsers=ChromeHeadless"
+      working-directory: ${{ inputs.source_dir }}
       shell: bash
 
     - name: Test Angular application (headless)
       run: npm run test:ci
+      working-directory: ${{ inputs.source_dir }}
       shell: bash
 
     - name: Sonarcloud SAST
