--- a/python-pipeline/.devcontainer/devcontainer.json
+++ b/python-pipeline/.devcontainer/devcontainer.json
@@ -3,8 +3,8 @@
 {
 	"name": "python",
 	"build": {
-		"dockerfile": "Dockerfile",
-		"context": "."
+		"dockerfile": "../Dockerfile",
+		"context": "../"
 	},
 	"features": {
 		"ghcr.io/devcontainers/features/common-utils:2": {}
