--- a/python-uv-pipeline/.github/dependabot.yml
+++ b/python-uv-pipeline/.github/dependabot.yml
@@ -11,11 +11,10 @@ updates:
       interval: "weekly"
   - package-ecosystem: "docker"
     directories:
-      - ".devcontainer"
       - "/"
     schedule:
       interval: "weekly"
   - package-ecosystem: "pip"
-    directory: "/" 
+    directory: "/" #change if app dir is not root
     schedule:
       interval: "weekly"
