--- a/cpp-pipeline/.github/dependabot.yml
+++ b/cpp-pipeline/.github/dependabot.yml
@@ -11,13 +11,7 @@ updates:
       interval: "weekly"
   - package-ecosystem: "docker"
     directories:
-      - "/gradle-pipeline/"
-      - "/maven-pipeline/"
-      - "/node-pipeline/"
-      - "/python-pipeline/"
-      - "/python-poetry-pipeline/"
-      - "/python-uv-pipeline/"
-      - "/cplusplus-pipeline/"
-      - "/golang-pipelne/"
+      - "/"
     schedule:
       interval: "weekly"
+# waiting for vcpkg support
