--- a/python-poetry-pipeline/Dockerfile
+++ b/python-poetry-pipeline/Dockerfile
@@ -11,6 +11,17 @@ rm -rf /var/cache
 # install poetry
 RUN curl -sSL https://install.python-poetry.org | python3 -
 
+# Install Trivy 
+RUN <<EOF cat >> /etc/yum.repos.d/trivy.repo
+[trivy]
+name=Trivy repository
+baseurl=https://aquasecurity.github.io/trivy-repo/rpm/releases/\$basearch/
+gpgcheck=1
+enabled=1
+gpgkey=https://aquasecurity.github.io/trivy-repo/rpm/public.key
+EOF
+RUN dnf update -y; dnf install trivy -y; rm -rf /var/cache
+
 # OPTIONAL DEPLOYMENT EXAMPLE:
 #-----------------------------
 ## Make App folder, copy project into container
