--- a/golang-pipelne/.github/workflows/golang.yml
+++ b/golang-pipelne/.github/workflows/golang.yml
@@ -6,6 +6,7 @@ env:
   DOCKER_IMAGE_NAME: ""
   SONAR_ORGANIZATION: ""
   SONAR_PROJECT_KEY: ""
+  PROJECT_DIR: "."
   GOLANG_VERSION: "1.16"
   
 jobs:
@@ -29,6 +30,7 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         gitleaks_token: ${{ secrets.GITLEAKS_TOKEN }}
         sonar_token: ${{ secrets.SONAR_TOKEN }}
+        source_dir: ${{ env.PROJECT_DIR }}
         sonar_args: >
           -D sonar.organization=${{ env.SONAR_ORGANIZATION }}
           -D sonar.projectKey=${{ env.SONAR_PROJECT_KEY }}
