--- a/node-pipeline/.devcontainer/devcontainer.json
+++ b/node-pipeline/.devcontainer/devcontainer.json
@@ -7,8 +7,10 @@
 	},
 	"features": {
 		"ghcr.io/devcontainers/features/common-utils:2": {}
-
 	},
+	// uncomment if the app/source directory is in a sub folder
+	// "workspaceMount": "source=${localWorkspaceFolder}/,my-app,target=/workspace,type=bind",
+	// "workspaceFolder": "/workspace",
 
 	// may be needed for Podman
 	"runArgs": [
