--- a/maven-pipeline/.devcontainer/devcontainer.json
+++ b/maven-pipeline/.devcontainer/devcontainer.json
@@ -9,7 +9,7 @@
 		"ghcr.io/devcontainers/features/common-utils:2": {}
 	},
 	// uncomment if the app/source directory is in a sub folder
-	// "workspaceMount": "source=${localWorkspaceFolder}/,my-app,target=/workspace,type=bind",
+	// "workspaceMount": "source=${localWorkspaceFolder}/myApp,target=/workspace,type=bind",
 	// "workspaceFolder": "/workspace",
 
 	// may be needed for Podman
