--- a/rust-pipeline/.github/workflows/rust.yml
+++ b/rust-pipeline/.github/workflows/rust.yml
@@ -7,7 +7,6 @@ env:
   SONAR_ORGANIZATION: ""
   SONAR_PROJECT_KEY: ""
   PROJECT_DIR: "."
-  GOLANG_VERSION: "1.16"
   
 jobs:
   build:
@@ -25,7 +24,7 @@ jobs:
         fetch-depth: 0
 
     - name: Run Custom Golang CI action
-      uses: ./.github/actions/golang/
+      uses: ./.github/actions/rust/
       with: 
         github_token: ${{ secrets.GITHUB_TOKEN }}
         gitleaks_token: ${{ secrets.GITLEAKS_TOKEN }}
@@ -38,4 +37,3 @@ jobs:
         dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
         dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
         docker_image_name: ${{ env.DOCKER_IMAGE_NAME }}
-        golang_version: ${{env.GOLANG_VERSION}}
