fix(rust): fix incorrect on actions

--- a/python-pipeline/.devcontainer/devcontainer.json
+++ b/python-pipeline/.devcontainer/devcontainer.json
@@ -17,6 +17,8 @@
 	"runArgs": [
 		"--userns=keep-id",
 		"--pid=host"
+		//"--device=nvidia.com/gpu=all" // may need this for Nvidia GPU passthrough
+		//"--device=/dev/kfd", "--device=/dev/dri", "--security-opt=no-new-privileges", "--cap-drop=ALL" // may need this for AMD GPU passthrough
 	],
 	"remoteUser": "root",
 	"containerUser": "root",
