--- a/rust-pipeline/.devcontainer/devcontainer.json
+++ b/rust-pipeline/.devcontainer/devcontainer.json
@@ -16,7 +16,9 @@
 	//may be needed for Podman
 	"runArgs": [
 		"--userns=keep-id",
-		"--pid=host"
+		"--pid=host",
+		//"--device=nvidia.com/gpu=all" // may need this for Nvidia GPU passthrough
+		//"--device=/dev/kfd", "--device=/dev/dri", "--security-opt=no-new-privileges", "--cap-drop=ALL" // may need this for AMD GPU passthrough
 	],
 	"remoteUser": "root",
 	"containerUser": "root",
