--- a/rust-pipeline/.vscode/tasks.json
+++ b/rust-pipeline/.vscode/tasks.json
@@ -21,6 +21,15 @@
 		},
 		{
 			"type": "cargo",
+			"command": "clippy",
+			"problemMatcher": [
+				"$rustc"
+			],
+			"group": "build",
+			"label": "rust: cargo lint"
+		},
+		{
+			"type": "cargo",
 			"command": "run",
 			"problemMatcher": [
 				"$rustc"
