--- a/golang-pipelne/.github/workflows/golang.yml
+++ b/golang-pipelne/.github/workflows/golang.yml
@@ -1,6 +1,6 @@
 name: Golang CI Pipeline
 
-on: [push, pull_request]
+on: [push]
 
 env:
   DOCKER_IMAGE_NAME: ""
@@ -25,7 +25,7 @@ jobs:
         fetch-depth: 0
 
     - name: Run Custom Golang CI action
-      uses: ./.github/actions/golang/
+      uses: ./.github/actions/golang
       with: 
         github_token: ${{ secrets.GITHUB_TOKEN }}
         gitleaks_token: ${{ secrets.GITLEAKS_TOKEN }}
@@ -37,5 +37,5 @@ jobs:
           -D sonar.sources=${{ env.PYTHON_APP_SOURCE_DIR }}
         dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
         dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
-        docker_image_name: ${{ env.DOCKER_IMAGE_NAME }}
+        docker_image_name: ${{ env.DOCKER_IMAGE_NAME || github.event.repository.name }}
         golang_version: ${{env.GOLANG_VERSION}}
