--- a/gradle-pipeline/.github/workflows/gradle.yml
+++ b/gradle-pipeline/.github/workflows/gradle.yml
@@ -1,6 +1,6 @@
 name: Gradle CI Workflow
 
-on: [push, pull_request]
+on: [push]
 
 env:
   DOCKER_IMAGE_NAME: ""
@@ -32,7 +32,7 @@ jobs:
           -Dsonar.organization=${{ env.SONAR_ORGANIZATION }}
           -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }}
           -Dsonar.host.url=https://sonarcloud.io
-        docker_image_name: ${{ env.DOCKER_IMAGE_NAME }}
+        docker_image_name: ${{ env.DOCKER_IMAGE_NAME || github.event.repository.name }}
         dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
         dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
         source_dir: ${{ env.GRADLE_APP_SOURCE_DIR }}
