--- a/rust-pipeline/.github/workflows/rust.yml
+++ b/rust-pipeline/.github/workflows/rust.yml
@@ -1,12 +1,11 @@
 name: Rust CI Pipeline
 
-on: [push, pull_request]
+on: [push]
 
 env:
   DOCKER_IMAGE_NAME: ""
   SONAR_ORGANIZATION: ""
   SONAR_PROJECT_KEY: ""
-  PROJECT_DIR: "."
   
 jobs:
   build:
@@ -24,16 +23,15 @@ jobs:
         fetch-depth: 0
 
     - name: Run Custom Rust CI action
-      uses: ./.github/actions/rust/
+      uses: ./.github/actions/rust
       with: 
         github_token: ${{ secrets.GITHUB_TOKEN }}
         gitleaks_token: ${{ secrets.GITLEAKS_TOKEN }}
         sonar_token: ${{ secrets.SONAR_TOKEN }}
-        source_dir: ${{ env.PROJECT_DIR }}
         sonar_args: >
           -D sonar.organization=${{ env.SONAR_ORGANIZATION }}
           -D sonar.projectKey=${{ env.SONAR_PROJECT_KEY }}
           -D sonar.sources=${{ env.PYTHON_APP_SOURCE_DIR }}
         dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
         dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
-        docker_image_name: ${{ env.DOCKER_IMAGE_NAME }}
+        docker_image_name: ${{ env.DOCKER_IMAGE_NAME || github.event.repository.name }}
